<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_res_colorWhite"
    android:orientation="vertical">

    <include layout="@layout/component_common_layout_tool_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:text="@string/module_account_register"
        android:textColor="@color/component_res_colorTextBlack"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:hint="@string/module_account_account"
        android:inputType="text"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/component_res_colorTextMiddle"
        android:textSize="@dimen/component_res_text16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@color/component_res_colorTextBlack" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:hint="@string/module_account_password"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/component_res_colorTextMiddle"
        android:textSize="@dimen/component_res_text16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@color/component_res_colorTextBlack" />

    <EditText
        android:id="@+id/rePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:hint="@string/module_account_password_repeat"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/component_res_colorTextMiddle"
        android:textSize="@dimen/component_res_text16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@color/component_res_colorTextBlack" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/module_account_selector_login"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/module_account_register"
        android:textColor="@color/component_res_colorTextBlack" />

</LinearLayout>